# PromptShield

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
attacks/: jailbreaks.md  prompt_injection.md
attacks/packs/: advanced.yaml  benign.yaml  exfiltration.yaml  hard_multiturn.yaml  role_confusion.yaml  starter.yaml  system_override.yaml
examples/: fastapi_app.py
promptshield/: __init__.py
promptshield/cli/: __init__.py  compliance.py  main.py  modelscan.py  redteam.py
promptshield/compliance/: __init__.py  audit.py  config.py  patterns.py  pii.py  scanner.py  secrets.py  types.py
promptshield/dashboard/: __init__.py  app.py
promptshield/data/: __init__.py
promptshield/data/patterns/: __init__.py  exfiltration.json  jailbreak.json  prompt_injection.json  role_confusion.json
promptshield/detectors/: __init__.py  exfiltration.py  injection.py  jailbreak.py  patterns.py  role_confusion.py
promptshield/engine/: __init__.py  config.py  context.py  events.py  registry.py  risk.py  scanner.py  types.py  verdict.py
promptshield/modelscan/: __init__.py  registry.py  runner.py  types.py
promptshield/redteam/: __init__.py  packs.py  report.py  runner.py  schema.json  schema.py
promptshield/sandbox/: __init__.py  autogen.py  intercept.py  langchain.py  policy.py
promptshield/sdk/: __init__.py  middleware.py
tests/: test_compliance_scan.py  test_modelscan_echo.py  test_redteam_pack.py  test_risk_config.py  test_sandbox_policy.py  test_scan_messages.py  test_scan_prompt.py
