[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-shield"
version = "0.1.0"
description = "PromptShield — Runtime security firewall for LLM applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PromptShield Contributors" }
]
keywords = ["llm", "security", "prompt-injection", "jailbreak", "middleware"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/pravin9033/prompt-shield"

[project.scripts]
promptshield = "promptshield.cli.main:main"

[tool.setuptools]
packages = [
  "promptshield",
  "promptshield.engine",
  "promptshield.detectors",
  "promptshield.sdk",
  "promptshield.cli"
]
