[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-shield"
version = "0.1.0"
description = "PromptShield — Runtime security firewall for LLM applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PromptShield Contributors" }
]
keywords = ["llm", "security", "prompt-injection", "jailbreak", "middleware"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries"
]
dependencies = []

[project.optional-dependencies]
cli = ["typer>=0.12.0"]
redteam = ["PyYAML>=6.0", "jsonschema>=4.21.0"]
middleware = ["starlette>=0.37.0"]
compliance = []
dashboard = ["fastapi>=0.111.0", "uvicorn>=0.29.0"]
modelscan = ["PyYAML>=6.0", "jsonschema>=4.21.0"]
test = ["pytest>=7.4", "pytest-cov>=4.1"]
all = [
  "typer>=0.12.0",
  "PyYAML>=6.0",
  "jsonschema>=4.21.0",
  "starlette>=0.37.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.29.0"
]

[project.urls]
Homepage = "https://github.com/pravin9033/prompt-shield"

[project.scripts]
promptshield = "promptshield.cli.main:main"

[project.entry-points."promptshield.detectors"]
prompt_injection = "promptshield.detectors.injection:get_detector"
jailbreak = "promptshield.detectors.jailbreak:get_detector"
role_confusion = "promptshield.detectors.role_confusion:get_detector"
data_exfiltration = "promptshield.detectors.exfiltration:get_detector"

[tool.setuptools]
packages = [
  "promptshield",
  "promptshield.data",
  "promptshield.data.patterns",
  "promptshield.compliance",
  "promptshield.dashboard",
  "promptshield.engine",
  "promptshield.detectors",
  "promptshield.sandbox",
  "promptshield.sdk",
  "promptshield.cli",
  "promptshield.redteam",
  "promptshield.modelscan"
]

[tool.setuptools.package-data]
"promptshield.redteam" = ["schema.json"]
"promptshield.data.patterns" = ["*.json"]
